# py-func-trace

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  setup.cfg  setup.py
.github/workflows/: testing.yml
src/py_func_trace/: func_trace.py  trace.py
src/py_func_trace.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_all.py  test_foobar.py
