[metadata]
name = py_func_trace
version = 0.1.0
author = pat
author_email = pat@p15r.net
description = A small lib to trace function entries & exists
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/p15r/py-func-trace
project_urls =
    Bug Tracker = https://github.com/p15r/py-func-trace/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
